...
            app:iconTint="@android:color/white"
            app:strokeColor="@android:color/white"
            app:strokeWidth="2dp" />

        <!-- 撮影ボタン -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonCapture"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="16dp"
            android:contentDescription="@string/button_capture"
            android:src="@drawable/ic_camera_24"
            app:backgroundTint="?attr/colorPrimary"
...
