...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnSurface" />

        <!-- Edit button -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/button_edit"
            android:src="@drawable/ic_edit_24"
            app:layout_constraintEnd_toEndOf="parent"
...
